fix(loadscreen): removes z-index change since it overrides fade animation

--- a/styles/loadscreen.css
+++ b/styles/loadscreen.css
@@ -21,5 +21,4 @@
 
 .loadscreen.fade {
 	opacity: 0;
-	z-index: -100;
 }
